# WhatWeDoin

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json  prd.md
backend/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  openapi.yaml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_places_theme_tags.py  0003_stations_external_unique.py  0004_place_user_ratings.py  0005_users_withdrawn_at_rr_nullable.py  0006_course_places_stage_options.py  0007_place_rating_reports_user_id.py  0008_drop_course_review_reports.py
backend/app/: main.py
backend/app/core/: config.py  deps.py
backend/app/models/: __init__.py  auth.py  cache.py  category_labels.py  config.py  course.py  enums.py  place.py  place_report.py  recommendation.py  review.py  station.py  user.py
backend/app/routers/: auth.py  courses.py  places.py  recommend.py  reviews.py  stations.py  users.py
backend/app/services/: auth.py  cache_ratelimit.py  classifier.py  course_generator.py  kakao_places.py  place_search.py  (+1 more)
backend/scripts/: backfill_place_theme_tags.py  etl_menu_keywords.py  etl_places.py  seed_stations.py
backend/tests/: test_auth.py  test_backfill_place_theme_tags.py  test_classifier.py  test_course_generator.py  test_courses_list.py  test_etl_menu_keywords.py  test_kakao_places.py  test_llm_provider.py  test_models.py  test_place_report.py  test_place_search.py  test_placeholder.py  test_recommend.py  test_reviews.py  test_seed_stations.py  test_stations.py  test_users.py  test_users_courses.py
(+94 files in other folders)
